Fixed table alignment and extra row bug

--- a/web/rainmaker/packages/employee/src/modules/employee/reports/index.scss
+++ b/web/rainmaker/packages/employee/src/modules/employee/reports/index.scss
@@ -43,9 +43,13 @@
   font-weight: bold;
 }
 
-.report-header-cell {
-  padding: 10px !important;
-}
+// .dataTables_scrollBody .report-header-cell {
+//   padding: 0 !important;
+// }
+
+// .report-header-cell {
+//   padding: 10px !important;
+// }
 
 .report-header-row-label {
   font-weight: bold;
@@ -63,23 +67,29 @@
   margin-right: 10px;
 }
 
+.margin0 {
+  margin: 0 !important;
+}
 // table.dataTable td {
 //   word-break: break-word;
 // }
 
-.dropdown-menu > .active > a
-{
-    background-color: rgb(254, 122, 81) !important;
+.dropdown-menu > .active > a {
+  background-color: rgb(254, 122, 81) !important;
 }
 
 .report_filters {
   margin-bottom: 8px;
 }
 
-.dataTable th, td {
-  word-break: break-all; /* IE supports this */
-  word-break: break-word; /* IE doesn't support, and will ignore */
-  /* http://caniuse.com/#feat=word-break */
+.dataTable th,
+td {
+  .dataTable th,
+  td {
+    word-break: break-all; /* IE supports this */
+    word-break: break-word; /* IE doesn't support, and will ignore */
+    /* http://caniuse.com/#feat=word-break */
+  }
 }
 
 @media only screen and (max-width: 704px) {
